jira_clone/force-app/main/default/objects/ProjectMember__c/ProjectMember__c.object-meta.xml
<CustomObject>
    <description>Project membership linking users to projects</description>
    <label>Project Member</label>
    <nameField>
        <label>Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>