jira_clone/force-app/main/default/objects/ProjectMember__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>Profile image URL for the project member, shown in ticket activity logs.</description>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>