jira_clone/force-app/main/default/objects/ProjectMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the member within the project</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
                <label>PPO (Backlog Owner)</label>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Test Factory</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
                <default>true</default>
                <label>Developer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>