jira_clone/force-app/main/default/objects/ProjectMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User reference</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Memberships</relationshipLabel>
    <relationshipName>ProjectMemberships</relationshipName>
    <type>Lookup</type>
<deleteConstraint>SetNull</deleteConstraint>

</CustomField>